# airavata-cerebrum

./: .asf.yaml  .flake8  .gitignore  .gitmodules  CONTRIBUTING.md  INSTALL.md  README.md  TODO.md  cybershuttle.yml  env_full.yml  environment.yml  pyproject.toml  requirements.txt  tox.ini
airavata_cerebrum/: __init__.py  base.py  const.py  recipe.py  register.py  workflow.py
airavata_cerebrum/dataset/: __init__.py  abc_mouse.py  abm_celltypes.py  ai_synphys.py  bicn.py  me_features.py
airavata_cerebrum/model/: builder.py  recipe.py  setup.py  structure.py
airavata_cerebrum/operations/: __init__.py  abc_mouse.py  abm_celltypes.py  ai_synphys.py  dict_filter.py  json_filter.py  me_features.py  netops.py  xform.py
airavata_cerebrum/sonata/: edge.py
airavata_cerebrum/util/: __init__.py  io.py  profile.py
airavata_cerebrum/view/: __init__.py  motree.py  tree.py
examples/: README.md  cybershuttle.yml  environment.yml
examples/editor/: README.md
examples/simple/: Simple.ipynb  abc_mouse.db  abm_mouse.db  build_network.py  edge_types.csv  edges.h5  node_types.csv  nodes.h5
examples/sleep/wbn_sleep/: .gitignore  data_config.json  model.py  network_config.json
examples/sleep/wbn_sleep/recipe/: custom_mod.json  recipe.json
examples/v1/: README.md  V1-BMTK-Simulate.ipynb  V1-CS-Notebook.ipynb  V1L4-Nest-Run.ipynb  V1L4-Notebook.ipynb  marimo_v1.py  marimo_v1l4.py  marimo_v1l4db.py
examples/v1/archive/: merfish2model.ipynb
examples/v1/builds/v1030/: config.json  full_path_config.json
examples/v1/builds/v1l4/: config_nest.json
examples/v1/builds/v1r1/: config.json  config_nest.json
examples/v1/components/cell_models/: 323452245_glif_lif_asc_config.json  328031983_glif_lif_asc_config.json  341016267_glif_lif_asc_config.json  469801569_glif_lif_asc_config.json  475057898_glif_lif_asc_config.json  477490421_glif_lif_asc_config.json  477880128_glif_lif_asc_config.json  480643417_glif_lif_asc_config.json  480999763_glif_lif_asc_config.json  481093098_glif_lif_asc_config.json  482444444_glif_lif_asc_config.json  482516216_glif_lif_asc_config.json  484559000_glif_lif_asc_config.json  484742372_glif_lif_asc_config.json  485184849_glif_lif_asc_config.json  486510127_glif_lif_asc_config.json  487400838_glif_lif_asc_config.json  487668030_glif_lif_asc_config.json  488430487_glif_lif_asc_config.json  488440436_glif_lif_asc_config.json  488467273_glif_lif_asc_config.json  490982660_glif_lif_asc_config.json  491030723_glif_lif_asc_config.json  501730497_glif_lif_asc_config.json  513531471_glif_lif_asc_config.json  522257166_glif_lif_asc_config.json  524090036_glif_lif_asc_config.json  527464013_glif_lif_asc_config.json  547325858_glif_lif_asc_config.json  554454165_glif_lif_asc_config.json  556363725_glif_lif_asc_config.json  557261437_glif_lif_asc_config.json  560373629_glif_lif_asc_config.json  560581448_glif_lif_asc_config.json  563380422_glif_lif_asc_config.json  569270348_glif_lif_asc_config.json  569623233_glif_lif_asc_config.json  579662957_glif_lif_asc_config.json  580010290_glif_lif_asc_config.json  581404810_glif_lif_asc_config.json  (+9 more)
examples/v1/components/point_neuron_models/: 313861608_glif_lif_asc_config.json  327679841_glif_lif_asc_config.json  327962063_glif_lif_asc_config.json  329224678_glif_lif_asc_config.json  341442651_glif_lif_asc_config.json  471141261_glif_lif_asc_config.json  471800189_glif_lif_asc_config.json  473593847_glif_lif_asc_config.json  473943881_glif_lif_asc_config.json  475586130_glif_lif_asc_config.json  475622793_glif_lif_asc_config.json  476263004_glif_lif_asc_config.json  478110866_glif_lif_asc_config.json  478949560_glif_lif_asc_config.json  479218494_glif_lif_asc_config.json  479298854_glif_lif_asc_config.json  480952106_glif_lif_asc_config.json  481018305_glif_lif_asc_config.json  482521571_glif_lif_asc_config.json  482772037_glif_lif_asc_config.json  484509440_glif_lif_asc_config.json  484742372_glif_lif_asc_config.json  485574832_glif_lif_asc_config.json  485938494_glif_lif_asc_config.json  486262299_glif_lif_asc_config.json  487176969_glif_lif_asc_config.json  487445455_glif_lif_asc_config.json  488430487_glif_lif_asc_config.json  488674910_glif_lif_asc_config.json  488680917_glif_lif_asc_config.json  490376252_glif_lif_asc_config.json  490612150_glif_lif_asc_config.json  490718897_glif_lif_asc_config.json  (+30 more)
examples/v1/setup/: v1030k.yaml  v1060k.yaml  v1120k.yaml  v1test.yml  v1test2.yml  v1test2x.yml  v1test3.yml  v1test4.yml
examples/v1/src/: cli.py  comm_interface.py  convert2cerebrum.py  convert_cell_models.py  dm_network.py  edit_cli.py  lfour_cli.py  lfour_params.py  model.py  nest_simulate_cli.py  network.py  params.py  run_pointnet.py  simulate_cli.py  sonata_df.py  utils.py  v1-build-test.csv
paper/: paper.bib  paper.md
resources/: DOC.md  README.md
resources/notebooks/: README.md  SonataEditorDemo.ipynb  V1-BMTK-Simulate.ipynb  V1L4-Nest-Run.ipynb  V1L4-Notebook.ipynb  WGN-Sleep.ipynb  cerebrumv1.py  cybershuttle.yml  env.sh  environment.yml  marimo_sonata_editor.py  marimo_v1l4db.py  mov1.py  mov1l4.py  mov1l4db.py  v1.py  v1_bmtk_simulate.py  v1_build.py  v1_nest_simulate.py  v1_plots.py  v1l4.py  v1l4_build_cli.py  v1l4_view.py
resources/notebooks/build_setup/: v1030k.yaml  v1060k.yaml  v1test2.yml  v1test2x.yml  v1test3.yml
resources/notebooks/model_bkg/: bkg_spikes_1kHz_10s.h5  bkg_spikes_250Hz_10s.h5  bkg_spikes_full_10s.h5  bkg_spikes_full_3s.h5  bkg_spikes_regular_1s.h5
resources/notebooks/mousev1/: cli.py  comm_interface.py  convert2cerebrum.py  convert_cell_models.py  dm_network.py  edge_collator.py  edge_props_table.py  edit_cli.py  model.py  mpi_utils.py  network.py  operations.py  params.py  plotting_utils.py  utils.py  v1_convert2model.py
resources/notebooks/v1/: bkg_node_types.csv  bkg_v1_edge_types.csv  bkg_v1_edges.h5  config_nest.json  v1_node_types.csv  v1_nodes.h5  v1_v1_edge_types.csv  v1_v1_edges.h5
resources/notebooks/wgn_sleep/: model.py
resources/scripts/: v1_bkg_spike_generation.py  v1l4_nest_notebook.py
scripts/: build_release.sh  extract_nb_images.py
(+696 files in other folders)
