#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "airavata-cerebrum"
version = "0.1.0"
description = "Apache Airavata Cerebrum : Integrated Data-driver Modeling for Computational Neuroscience"
authors = [{ name = "Sriram P Chockalingam", email = "srirampc@gatech.edu" }]
maintainers = [
    { name = "Apache Airavata Developers", email = "dev@apache.airavata.org" },
]
readme = "README.md"
homepage = "https://github.com/apache/airavata-cerebrum"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "Data-driven",
    "Computational Neuroscience",
    "Neuroscience Modeling",
]
requires-python = ">=3.10"
dependencies = [
    "anywidget (>=0.9)",
    "allensdk (>=2.16)",
    "altair (>=6.0)",
    "anndata (>=0.10)",
    "awitree (>=0.1)",
    "duckdb (>=1.2)",
    "fastexcel (>=0.13)",
    "ipywidgets (>=8.1)",
    "ipytree (>=0.2)",
    "matplotlib (>=3.7)",
    "numpy (>=1.23)",
    "openpyxl (>=3.1)",
    "parse (>=1.20)",
    "pandas (>=1.5)",
    "polars  (>=1.26)",
    "psutil (>=7.0)",
    "pydantic (>=2.7)",
    "python-jsonpath (>=1.2.0)",
    "pyyaml (>=6.0)",
    "requests (>=2.31)",
    "scanpy (>=1.9)",
    "scipy (>=1.9)",
    "tqdm (>=4.66)",
    "traitlets (>=5.1)",
    #
    "h5py",
    "jupyter",
    "lmfit",
    "neuroanalysis",
    "numba",
    "pillow",
    "psycopg2",
    #"pyqt",
    "pyqtgraph",
    "scikit-image",
    "scikit-learn",
    "seaborn",
    "sqlalchemy",
    "statsmodels",
]
#
# optional-dependencies = [
#     { flake8 = [
#         "flake8 (>=7.1)",
#     ] },
#     { jupyterlab = [
#         "jupyterlab (>=3.5)",
#     ] },
# ]
#
#
# [tool.poetry.dependencies]
# abc_atlas_access = { git = "https://github.com/alleninstitute/abc_atlas_access" }
# aisynphys = { git = "https://github.com/alleninstitute/aisynphys" }

[tool.poetry]
packages = [
    { include = "airavata_cerebrum" },
    # codetiming
    { include = "codetiming/", from = "ext/codetiming/", to = "airavata_cerebrum/ext/", format = [
        "sdist",
        "wheel",
    ] },
    { include = "LICENSE", from = "ext/codetiming", to = "airavata_cerebrum/ext/codetiming", format = [
        "sdist",
        "wheel",
    ] },
    { include = "README.md", from = "ext/codetiming", to = "airavata_cerebrum/ext/codetiming" },
    { include = "AUTHORS.md", from = "ext/codetiming", to = "airavata_cerebrum/ext/codetiming" },
    ## aisynphys
    { include = "aisynphys", from = "ext/aisynphys/", to = "airavata_cerebrum/ext/" },
    { include = "LICENSE", from = "ext/aisynphys", to = "airavata_cerebrum/ext/aisynphys" },
    { include = "README.md", from = "ext/aisynphys", to = "airavata_cerebrum/ext/aisynphys" },
    ## abc_atlas_access
    { include = "abc_atlas_access", from = "ext/abc_atlas_access/src/", to = "airavata_cerebrum/ext/" },
    { include = "LICENSE", from = "ext/abc_atlas_access", to = "airavata_cerebrum/ext/abc_atlas_access" },
    { include = "README.md", from = "ext/abc_atlas_access", to = "airavata_cerebrum/ext/abc_atlas_access" },
]


# [tool.pyright]
# include = ["airavata_cerebrum", "tests", "resources"]
# exclude = ["**/__pycache__"]
# reportOptionalMemberAccess = false,
# reportOptionalSubscript = false,
# reportGeneralTypeIssues = false,

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = ["F841"]

[tool.basedpyright]
include = ["airavata_cerebrum"]
exclude = ["**/__pycache__", "airavata_cerebrum/ext"]
reportAny = false
reportExplicitAny = false
reportGeneralTypeIssues = false
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportUnknownMemberType = false
reportUnusedCallResult = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
